[翼人] java8 相容性修改 GC CMS 參數
git-svn-id: http://svn.l2jfree.com/l2jtw_server/L2JTW_Server_Ertheia@1272 646423ef-4436-4fec-ba03-b4287202c007